2011-11-22 yusei
* Stop showing detailed DateTime in listbox. This problem started occur due to recent specification change of zope's DateTime.

2011-05-27 arnaud.fontaine
* Remove meaningless 'Order Quantity Unit' and 'Order Quantity' columns, and use the translated title for the 'Quantity Unit' cells in Transformation Stock view.

2011-05-23 tatuya
* Add Stock view into Transformation portal type.

2011-05-17 yusei
* Pass display_id='translated_title' to all getVariationRangeBaseCategoryItemList call. Category titles in variation category list must be always translated.

2010-10-19 yo
* Specify Acquisition Portal Types to industrial_phase.

2010-07-20 yusuke
* Supply Cell must be inherit start_date range from the parent.

2010-07-14 yusei
* Remove wrecks of already-removed forms.

2010-07-14 yusei
* Supply portal types do not acquire local roles.

2010-07-14 yusei
* Since Supply Line is an old portal type, move it to hidden content type list and hide it from users.

2010-07-12 yusei
* Fix industrial phase list field bug on Transformation_view.

2010-06-14 kazuhiko
* Fix a bug in Base_validateEan13Code that does not work in the case where the check digit is 0.

2010-05-27 yo
* Resource_getPriceCalculationOperandDict must return base_unit_price even if price is not found. So the meaning of the default parameter has changed slightly - now it represents the default value of price instead of the default value of the returned result. This way is more backward compatible.

2010-05-26 yo
* Now the Resource_getPriceCalculationOperandDict must include base_unit_price, as the script is shared with getPrice and getBaseUnitPrice.

2010-05-03 kazuhiko
* make precision of base_price in Resource_viewDefaultSaleSupplyLine same as SaleSupplyLine_view's one, and same for Internal Supply Line and Purchase Supply Line.

2010-04-22 yusei
* Fix Measure_reindexResource in conversion_interaction_workflow. Reindex resource only when measure is unindexed but resource is not.
